...
    <string name="log_info">Ping.IT Info</string>
    <string name="log_warning">Ping.IT Warn</string>
    <string name="log_error">Ping.IT Err</string>
    <string name="titleActivityHome">Ping.IT</string>
    <string name="loginWelcomeMessage">Welcome to Ping.IT. Please sign in.</string>
    <string name="loginBtn">Login</string>
    <string name="logoutBtn">Logout</string>
    <string name="faqSectionTitle">FAQ</string>
    <string name="chatSectionTitle">Chat</string>
    <string name="pingsSectionTitle">Pings</string>

    <string name="noNetworkConnectionMsg">Unable to connect to Ping.IT server. Please check network settings.</string>

    <string name="startupTitleLogin">Login to Ping.IT</string>
    <string name="startupTitleRegister">Register with Ping.IT</string>
    <string name="registerNamePlaceholder">First Name</string>
    <string name="registerEmailPlaceholder">College Email</string>
    <string name="registerPasswordPlaceholder">Password</string>
    <string name="registerPasswordPlaceholderConfirm">Confirm Password</string>
    <string name="registerBtn">Register</string>
    <string name="registerSwitchToLoginBtn">Already have an account?</string>
    <string name="registerSuccessMsg">Registration Successful!"</string>
...
    <string name="nameNotValid">Please enter a valid name.</string>
    <string name="emailAlreadyInUse">" is already in use. Please enter a different email."</string>
    <string name="isNotAValidEmail">" is not a valid email. Please use your school email."</string>
    <string name="emailNotValid">Please use your school email.</string>
    <string name="invalidCredentials">Email or password is incorrect. Please try again.</string>
    <string name="dialogConfirm">Okay</string>
    <string name="dialogYes">Yes</string>
    <string name="dialogNo">No</string>
    <string name="loginSuccessMsg">Login Successful!</string>
    <string name="signingInDialogMsg">Signing into Ping.IT…</string>
    <string name="signingOutDialogMsg">Signing out…</string>
    <string name="dialogCancel">Cancel</string>
    <string name="confirmLogoutMsg">Are you sure you would like to log out?</string>
    <string name="passwordTooShort">Please enter a password of at least 8 characters.</string>
    <string name="passwordMissingCharacters">Password must contain letters and numbers.</string>
    <string name="passwordNotValid">Please enter a valid password.</string>
    <string name="prefs_notification_sound_key">notification_sound_preference</string>
    <string name="prefs_notification_sound_title">Notification Sound</string>
    <string name="prefs_notification_sound_summary">Should display current sound</string>
    <string name="prefs_notification_resend_toggle_key">notification_resend_toggle</string>
    <string name="prefs_notification_resend_toggle_title">Notification Resend</string>
    <string name="prefs_notification_resend_toggle_summaryoff">Notification will only be sent once.</string>
    <string name="prefs_notification_resend_toggle_summaryon">Repeat notification after a set time.</string>
    <string name="prefs_notification_resend_delay_key">notification_resend_delay</string>
    <string name="prefs_notification_resend_delay_title">Notification Resend Delay</string>
    <string name="prefs_display_name_key">display_name</string>
    <string name="prefs_display_name_title">First Name</string>
    <string name="prefs_display_name_summary">Should display current name</string>
    <string name="prefs_display_name_dialogmessage">Please enter a display name.</string>
    <string name="prefs_clear_pings_key">clear_pings</string>
    <string name="prefs_clear_pings_title">Clear Archived Pings</string>
    <string name="prefs_clear_pings_summary">Erase all ping history.</string>
    <string name="prefs_clear_pings_dialogtitle">Are You Sure?</string>
    <string name="prefs_clear_pings_dialogmessage">This will clear all of your pings and cannot be undone. Are you sure you want to proceed?</string>
    <string name="prefs_clear_pings_positive">Yes, erase my pings.</string>
    <string name="ClickToRefresh">Click to Refresh</string>
    <string name="NoOnlineAdmins">No online admins.</string>
    <string name="fmtClickToChatWith">Click to chat with %s</string>
    <string name="fmtNumOnlineAdmins">There are %s online admins.</string>
    <string name="OneOnlineAdmin">There is 1 online admin.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loadingPings">Requesting pings...</string>
    <string name="pingConnectionError">Could not connect to the Ping.IT server.\nPlease try again later.</string>
    <string name="retryConnection">Retry</string>
    <string name="noPings">You currently have no pings!</string>
    <string name="pref_login">loginPref</string>
    <string name="pref_login_username">username</string>
    <string name="pref_login_password">password</string>
    <string name="str_login_title">Logging In...</string>
    <string name="str_login_msg">Logging in with saved credentials.</string>
    <string name="str_blank_name_msg">Name cannot be blank.</string>
    <string name="userNotLoggedIn">Parse user error!!! Is there no user currently logged in?</string>
    <string name="errorParsingSharedPrefs">Error parsing from the shared prefs. Perhaps the settings were not initialized correctly?</string>
    <string name="CloseChat">Close Chat</string>
    <string name="PingsCleared">Pings Cleared</string>
    <string name="UnableToClearPings">Unable to clear pings.</string>
    <string name="prefs_ringtone_failed">Failed to set ringtone.</string>
    <string name="startChat">Start Chat</string>
    <string name="describeIssue">Please Describe Your Issue</string>
    <string name="describeProblem">Please Describe Your Problem</string>
    <string name="loadingMsgs">Loading Messages</string>
...
