...
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment"
    android:name="edu.gcc.whiletrue.pingit.LoginFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:layout="@layout/fragment_login" />

